# nlp-with-disaster-tweets

./: .gitignore  README.md  RoBERTa.py  TF-IDF.py  pyproject.toml  submission_TF-IDF.csv
TF_IDF_APP/: TF-IDF.py  app.py  disaster_model.pkl  tfidf_vectorizer.pkl
TF_IDF_APP/static/: style.css
TF_IDF_APP/templates/: index.html
